# wanling

./: .env.example.docker  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.dev.example.yml  docker-compose.example.yml  docker-compose.prod.example.yml
app/: README.md  pubspec.yaml
app/android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
app/lib/: main.dart  router.dart  router_helpers.dart
app/linux/: CMakeLists.txt
app/scripts/: subset-emoji.sh
deploy/nginx/: README.md  nginx-tls.example.conf  nginx.example.conf
docs/: RELEASE-v1.0.4.md  RELEASE-v1.0.5.md  deployment.md
plugin/: README.md  install-remote.sh
plugin/hermes-plugin/: adapter.py  install.sh  plugin.yaml
scripts/: .gitignore  admin.sh  deploy.sh  init_db.sh  publish-plugin.sh  send_test_message.py
sdk/: .gitignore  README.md  setup.sh
sdk/mcp/: pyproject.toml
sdk/mcp/wanling_mcp/: __main__.py  bridge.py  server.py  store.py  tools.py
sdk/mcp/wanling_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/: pyproject.toml
sdk/python/wanling/: __init__.py  auth.py  client.py  http.py  models.py  types.py  ws.py
sdk/python/wanling_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: .air.toml  .dockerignore  .env.deploy.example  .env.example  .gitignore  Dockerfile  Dockerfile.dev  go.mod  go.sum
server/cmd/: main.go
server/migrations/: 001_init.sql  002_conversation_last_message.sql  003_unread_count.sql  004_pin_hide.sql  005_profile_fields.sql  006_message_soft_delete.sql  008_approvals.sql  (+11 more)
(+278 files in other folders)
