[project]
name = "wanling-mcp"
version = "0.1.0"
description = "万灵 MCP Server — 将万灵消息能力接入 AI 终端（Claude Code / OpenCode / ZCode / Cursor 等）"
requires-python = ">=3.10"
dependencies = [
    "wanling-sdk",
    "mcp>=1.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
wanling-sdk = { path = "../python", editable = true }
