[project]
name = "wanling-sdk"
version = "0.1.0"
description = "万灵 Agent SDK — 以 agent 身份连接万灵服务端，收发消息、管理审批、上传文件"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
